--- a/PROJETOS/style.css
+++ b/PROJETOS/style.css
@@ -1,10 +1,9 @@
 
 #fundo {
-    background-image: url(anabela/imagens/fundo.png)
-}
+    background-image: url(anabela/imagens/fundo.png);
+
 
 }
-
 
 #padrao {
  width: 900px;
@@ -20,6 +19,7 @@
     font-family: 'Times New Roman', Times, serif;
     background: lightgrey;
     padding: 15px;
+    
 }
 
 .menufinal {
@@ -30,7 +30,7 @@
     font-family: 'Times New Roman', Times, serif;
     background: lightgrey;
     padding: 15px;
-    padding-right: 222px;
+    padding-right: 132px;
 }
 
 .conteudo {
